openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productpage
  name: productpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
    spec:
      containers:
        - image: <IMAGE_NAME> # on purpose, will be replaced by pipeline
          imagePullPolicy: Always
          name: productpage
          ports:
            - containerPort: 9080
              protocol: TCP
