openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: productpage
spec:
  host: >-
    bookinfo-route.roks-bootcamp-194290-7cb1e9f279ecbad5dd278bca741c81b3-0000.eu-de.containers.appdomain.cloud
  path: /
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: 9080
